--- a/springsecurityjwtlogindemo2/src/main/resources/application.properties
+++ b/springsecurityjwtlogindemo2/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+
+#spring.mail.properties.mail.smtp.ssl.enable=true
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.socketFactory.port=465
+#spring.mail.properties.mail.smtp.socketFactoryClass=javax.net.ssl.SSLSocketFactory
+#spring.mail.properties.mail.debug=true
