Add the i18n settings,and set webpack to support pack and minimize scss.

--- a/springsecurityjwtlogindemo2/src/main/resources/application.yml
+++ b/springsecurityjwtlogindemo2/src/main/resources/application.yml
@@ -60,6 +60,9 @@ spring:
     publisher-returns: true
   thymeleaf:
     prefix: classpath:/templates/
+  messages:
+    encoding: UTF-8
+    basename: i18n/systemMessage
 
 mybatis-plus:
   configuration:
