--- a/login_chat_demo/package.json
+++ b/login_chat_demo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "login_chat_demo",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "author": "YueLee <xiroiyuki@hotmail.com>",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./build/webpack.config.js --open --hot",
     "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.config.js --progress --hide-modules",
     "webbuild": "webpack --mode production --config ./build/webpack.prod.config.js",
-    "webdev" : "webpack-dev-server --mode development --config ./build/webpack.dev.config.js"
+    "webdev": "webpack-dev-server --mode development --config ./build/webpack.dev.config.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -28,6 +28,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "autoprefixer": "^9.8.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-component": "^1.1.1",
     "clean-webpack-plugin": "^3.0.0",
@@ -46,6 +47,7 @@
     "style-loader": "^2.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^2.3.0",
+    "vue-i18n": "^8.24.1",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.46.0",
